# Perception

./: .gitignore
src/lidar_downsample/: CMakeLists.txt  package.xml  readme.md
src/lidar_downsample/launch/: lidar_downsample.launch
src/lidar_downsample/src/: lidar_downsample.cpp
src/lidar_euclidean_cluster_detector/: CMakeLists.txt  package.xml  readme.md
src/lidar_euclidean_cluster_detector/launch/: lidar_euclidean_cluster_detector.launch
src/lidar_euclidean_cluster_detector/src/: lidar_euclidean_cluster_detector.cpp
src/lidar_filtering/: CMakeLists.txt  package.xml
src/lidar_no_charge/: CMakeLists.txt  package.xml
src/lidar_no_charge/launch/: lidar_no_charge.launch
src/lidar_no_charge/src/: lidar_no_charge.cpp
src/lidar_no_ground/: CMakeLists.txt  package.xml  readme.md
src/lidar_no_ground/launch/: lidar_no_ground.launch
src/lidar_no_ground/src/: lidar_no_ground.cpp
src/lidar_pipeline_monitor/: CMakeLists.txt  package.xml
src/lidar_pipeline_monitor/msg/: PipelineMetrics.msg
src/lidar_pipeline_monitor/scripts/: monitor_node.py
src/lidar_sensor_input/: CMakeLists.txt  package.xml  readme.md
src/lidar_sensor_input/launch/: lidar_pipeline.launch  lidar_sensor_input.launch
src/lidar_sensor_input/src/: lidar_sensor_input.cpp
src/lidar_shape_estimation/: CMakeLists.txt  package.xml  readme.md
src/lidar_shape_estimation/launch/: lidar_shape_estimation.launch
src/lidar_shape_estimation/src/: lidar_shape_estimation.cpp
src/messages/autoware_msgs/msg/: TaskState.msg  VehicleState.msg
workspace/param/: charge.yaml  downsample.yaml  euclidean_cluster.yaml  ground.yaml  lidar_calibration.yaml  shape.yaml
