<?xml version="1.0"?>
<package format="2">
  <name>lidar_no_charge</name>
  <version>0.0.0</version>
  <description>The lidar_no_charge package - 充电桩点云过滤</description>

  <maintainer email="getq@todo.todo">getq</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>lidar_pipeline_monitor</build_depend>
  
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>lidar_pipeline_monitor</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>lidar_pipeline_monitor</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>