<?xml version="1.0"?>
<package format="2">
  <name>lidar_no_ground</name>
  <version>0.0.0</version>
  <description>The lidar_no_ground package - Autoware-style Ray Ground Filter for ground point removal</description>

  <maintainer email="getq@todo.todo">getq</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>lidar_pipeline_monitor</build_depend>
  <build_export_depend>lidar_pipeline_monitor</build_export_depend>
  <exec_depend>lidar_pipeline_monitor</exec_depend>

  <export>
  </export>
</package>