<?xml version="1.0"?>
<package format="2">
  <name>lidar_pipeline_monitor</name>
  <version>0.0.0</version>
  <description>The lidar_pipeline_monitor package</description>
  <maintainer email="getq@todo.todo">getq</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 新增：自定义消息的核心依赖 -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>autoware_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>